transferred to liwen

--- a/notebooks/debug_scannet_processing.ipynb
+++ b/notebooks/debug_scannet_processing.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "label database existed; not creating a new one. /home/ruizhu/Documents/Projects/Mask3D/data/processed/scannet/label_database.yaml\n"
      ]
     }
    ],
@@ -41,15 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1201 /newfoundland/ScanNet/scans/scene0055_00/scene0055_00_vh_clean_2.ply\n",
-      "55 0\n"
+      "312 /newfoundland/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.ply\n",
+      "329 1\n"
      ]
     }
    ],
@@ -62,10 +62,10 @@
     "    - scene0055_02_vh_clean_2.ply\n",
     "'''\n",
     "_idx = 100\n",
-    "filepath = scannet_processor.files['train'][_idx]\n",
-    "print(len(scannet_processor.files['train']), filepath)\n",
+    "filepath = scannet_processor.files['validation'][_idx]\n",
+    "print(len(scannet_processor.files['validation']), filepath)\n",
     "\n",
-    "# scene, sub_scene = ScannetPreprocessing._parse_scene_subscene(scannet_processor.files['train'][0].name)\n",
+    "# scene, sub_scene = ScannetPreprocessing._parse_scene_subscene(scannet_processor.files['validation'][0].name)\n",
     "\n",
     "scene_match = re.match(r\"scene(\\d{4})_(\\d{2})\", filepath.name)\n",
     "scene, sub_scene = int(scene_match.group(1)), int(scene_match.group(2))\n",
@@ -82,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/newfoundland/ScanNet/scans/scene0055_00/scene0055_00_vh_clean_2.ply\n",
-      "(95715, 3) [3.7441688 3.1282358 2.2303934] [-0.03978582 -0.00638135  0.00121044]\n",
-      "(95715, 6) [255.         255.         255.           1.           0.99999841\n",
-      "   0.99999996] [ 3.          3.          0.         -0.99999991 -0.99999954 -0.99999968]\n",
+      "/newfoundland/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.ply\n",
+      "(368473, 3) [ 9.308865 10.587272  2.998444] [ 0.2837082   0.9186443  -0.00797399]\n",
+      "(368473, 6) [255.         255.         255.           0.99999771   0.99999848\n",
+      "   0.99999987] [ 3.          3.          0.         -0.99999721 -0.99999923 -0.9999985 ]\n",
       "[1. 1. 1. ... 1. 1. 1.]\n",
-      "(95715, 9)\n"
+      "(368473, 9)\n"
      ]
     }
    ],
@@ -118,20 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/newfoundland/ScanNet/scans/scene0055_00/scene0055_00.txt\n",
-      "Bedroom / Hotel\n",
-      "/newfoundland/ScanNet/scans/scene0055_00/scene0055_00_vh_clean.aggregation.json\n",
-      "/newfoundland/ScanNet/scans/scene0055_00/scene0055_00_vh_clean_2.0.010000.segs.json\n",
-      "(95715,) [68560 68560 24469 24469 24469] (471,)\n",
-      "(95715,) [357 357 145 145 145] 470 0\n",
-      "(95715, 15)\n"
+      "/newfoundland/ScanNet/scans/scene0329_01/scene0329_01.txt\n",
+      "Lobby\n",
+      "/newfoundland/ScanNet/scans/scene0329_01/scene0329_01.aggregation.json\n",
+      "/newfoundland/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.0.010000.segs.json\n",
+      "(368473,) [53442 53442 53442 53442 53442] (2817,)\n",
+      "(368473,) [526 526 526 526 526] 2816 0\n",
+      "(368473, 10)\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
