fixed a few things for liwen

--- a/notebooks/debug_scannet_processing.ipynb
+++ b/notebooks/debug_scannet_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "label database existed; not creating a new one. /home/ruizhu/Documents/Projects/Mask3D/data/processed/scannet/label_database.yaml\n"
+      "label database existed; not creating a new one. /home/rzhu/Documents/Projects/Mask3D/data/processed/scannet/label_database.yaml\n"
      ]
     }
    ],
@@ -32,7 +32,8 @@
     "from datasets.preprocessing.scannet_preprocessing import ScannetPreprocessing\n",
     "\n",
     "scannet_processor = ScannetPreprocessing(\n",
-    "    data_dir=\"/newfoundland/ScanNet\", \n",
+    "    # data_dir=\"/newfoundland/ScanNet\", \n",
+    "    data_dir=\"/home/rzhu/Documents/data/ScanNet\", \n",
     "    save_dir=str(Path(module_path) / \"data/processed/scannet\"), \n",
     "    git_repo=str(Path(module_path) / \"third_party/ScanNet\"), \n",
     "    scannet200='false'\n",
@@ -41,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "312 /newfoundland/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.ply\n",
+      "312 /home/rzhu/Documents/data/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.ply\n",
       "329 1\n"
      ]
     }
@@ -81,29 +82,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/newfoundland/ScanNet/scans/scene0329_01/scene0329_01_vh_clean_2.ply\n",
-      "(368473, 3) [ 9.308865 10.587272  2.998444] [ 0.2837082   0.9186443  -0.00797399]\n",
-      "(368473, 6) [255.         255.         255.           0.99999771   0.99999848\n",
-      "   0.99999987] [ 3.          3.          0.         -0.99999721 -0.99999923 -0.9999985 ]\n",
-      "[1. 1. 1. ... 1. 1. 1.]\n",
-      "(368473, 9)\n"
-     ]
-    }
-   ],
    "source": [
     "from utils.point_cloud_utils import load_ply_with_normals\n",
     "import numpy as np\n",
     "\n",
     "print(filepath)\n",
-    "coords, features, _ = load_ply_with_normals(filepath)\n",
+    "filepath = '/home/rzhu/Documents/data/ScanNet/scans/scene0270_00/scene0270_00_vh_clean_2.labels.ply'\n",
+    "coords, features, labels_ = load_ply_with_normals(filepath)\n",
     "\n",
     "print(coords.shape, np.amax(coords, axis=0), np.amin(coords, axis=0))\n",
     "print(features.shape, np.amax(features, axis=0), np.amin(features, axis=0)) # 3 channels features (RGB) + 3 channel normals\n",
@@ -114,6 +101,55 @@
     "points = np.hstack((coords, features))\n",
     "\n",
     "print(points.shape) # (N, 9): x, y, z, R(255), G(255), B(255), nx, ny, nz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 40935\n",
+      "1 47533\n",
+      "2 30209\n",
+      "3 27339\n",
+      "4 29450\n",
+      "5 10111\n",
+      "7 2262\n",
+      "8 10255\n",
+      "11 1933\n",
+      "14 2378\n",
+      "16 14460\n",
+      "18 3657\n",
+      "19 856\n",
+      "22 3819\n",
+      "24 437\n",
+      "25 1374\n",
+      "32 2368\n",
+      "34 368\n",
+      "35 2845\n",
+      "37 762\n",
+      "39 163\n",
+      "40 4563\n",
+      "50 2335\n",
+      "[0, 1] {0: array([250,  30,  30], dtype=uint8), 1: array([ 33, 251, 251], dtype=uint8), 255: array([255, 255, 255], dtype=uint8)}\n",
+      "saved to tmp_mesh.ply\n"
+     ]
+    }
+   ],
+   "source": [
+    "for label_ in np.unique(labels_):\n",
+    "    print(label_, np.sum(labels_ == label_))\n",
+    "    \n",
+    "with open('tmp_labels.txt', 'w') as f:\n",
+    "    np.savetxt(f, (labels_>39).astype(np.int32), fmt='%d')\n",
+    "    \n",
+    "sys.path.insert(0, '../utils/scannet_utils')\n",
+    "from utils_visualize import visualize\n",
+    "visualize('tmp_labels.txt', filepath, 'tmp_mesh.ply', if_random_colors=True)"
    ]
   },
   {
